[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "pip"
build = "cp39* cp310* cp311* cp312* cp313* cp314* cp314*"

[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.23", "meson", "ninja", "cibuildwheel"]

[project]
name = "equilipy"
version = "0.2.0"
authors = [
    {name = "Sunyong Kwon", email = "kwons@ornl.gov"},
]
license = {text = "BSD-3"}
description = "A Gibbs energy minimization based on the CALPHAD approach"
readme = "README.md"
description = "A Gibbs energy minimization based on the CALPHAD approach"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "regex",
    "dataclasses",
    "meson",
    "ninja",
    "polars>=0.20.15",
    "xlsx2csv",
    "tqdm",
    "fastexcel",
    "typing",
    "pydantic"
]

[project.scripts]
equilipy = "equilipy.__main__:main"

[project.urls]
"documentation" = "https://ornl.github.io/Equilipy/"
"source" = "https://github.com/ORNL/Equilipy/"