[tool.cibuildwheel]
build-verbosity = 1
build-frontend = "pip"
build = "cp310* cp311* cp312* cp313* cp314*"

[tool.cibuildwheel.linux]
# manylinux images are dnf/yum-based (AlmaLinux); musllinux images are
# Alpine (apk). Detect the package manager so before-all works in all
# containers used by cibuildwheel >= 4.
before-all = "if command -v dnf >/dev/null 2>&1; then dnf install -y gcc-gfortran blas-devel lapack-devel; elif command -v yum >/dev/null 2>&1; then yum install -y gcc-gfortran blas-devel lapack-devel; else apk add --no-cache gfortran blas-dev lapack-dev; fi"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel && C:/msys64/usr/bin/bash -lc \"pacman -S --noconfirm --needed mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-openblas\""
environment = { MINGW_PREFIX = "C:/msys64/mingw64" }
repair-wheel-command = "delvewheel repair --add-path C:/msys64/mingw64/bin -w {dest_dir} {wheel}"

[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.23", "meson", "ninja", "cibuildwheel"]

[project]
name = "equilipy"
version = "0.3.0"
authors = [
    {name = "Sunyong Kwon", email = "kwons@ornl.gov"},
]
license = {text = "BSD-3"}
description = "A Gibbs energy minimization based on the CALPHAD approach"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "regex>=2024.11",
    "polars>=1.0",
    "tqdm>=4.64",
    "pydantic>=2.6",
    "joblib>=1.4",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
hpc = [
    "mpi4py>=3.1",
]

[project.scripts]
equilipy = "equilipy.__main__:main"
"equilipy.gui" = "equilipy.gui.app:main"
equilipy-gui = "equilipy.gui.app:main"   # legacy alias for equilipy.gui
"equilipy.docs" = "equilipy.docs:main"
equilipy-docs = "equilipy.docs:main"     # legacy alias for equilipy.docs


[project.urls]
"documentation" = "https://ornl.github.io/Equilipy/"
"source" = "https://github.com/ORNL/Equilipy/"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "B", "I", "E", "D"]
extend-ignore = ["D417", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = ["archive", "test_devop"]
